# hello-world-qemu-template-xpack

./: .npmignore  CHANGELOG.md  LICENSE  README-DEVELOPER.md  README-MAINTAINER.md  README.md  index.js  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: CI.yml  ci.yml
assets/sources/: CMakeLists-liquid.txt  LICENSE.liquid  README-liquid.md  meson-liquid.build  meson_options.txt  package-liquid.json
assets/sources/cmake/: globals.cmake
assets/sources/include/: main.h
assets/sources/meson/globals/: meson.build
assets/sources/platform-qemu-cortex-a15/: CMakeLists.txt  README.md  meson.build
assets/sources/platform-qemu-cortex-a15/cmake/: dependencies.cmake  globals.cmake
assets/sources/platform-qemu-cortex-a15/include-platform/micro-os-plus/: platform.h
assets/sources/platform-qemu-cortex-a15/include-platform/micro-os-plus/platform-qemu-cortex-a15/: defines.h
assets/sources/platform-qemu-cortex-a15/meson/: cross.ini
assets/sources/platform-qemu-cortex-a15/meson/dependencies/: meson.build
assets/sources/platform-qemu-cortex-a15/meson/globals/: meson.build
assets/sources/platform-qemu-cortex-a72/: CMakeLists.txt  README.md  meson.build
assets/sources/platform-qemu-cortex-a72/cmake/: dependencies.cmake  globals.cmake
assets/sources/platform-qemu-cortex-a72/include-config/micro-os-plus/: config.h
assets/sources/platform-qemu-cortex-a72/include-platform/micro-os-plus/: platform.h
assets/sources/platform-qemu-cortex-a72/include-platform/micro-os-plus/platform-qemu-cortex-a72/: defines.h
assets/sources/platform-qemu-cortex-a72/meson/: cross.ini
assets/sources/platform-qemu-cortex-a72/meson/dependencies/: meson.build
assets/sources/platform-qemu-cortex-a72/meson/globals/: meson.build
assets/sources/platform-qemu-cortex-m0/: CMakeLists.txt  README.md  meson.build
assets/sources/platform-qemu-cortex-m0/cmake/: dependencies.cmake  globals.cmake
assets/sources/platform-qemu-cortex-m0/include-config/micro-os-plus/: config.h
assets/sources/platform-qemu-cortex-m0/include-platform/micro-os-plus/: platform.h
assets/sources/platform-qemu-cortex-m0/include-platform/micro-os-plus/platform-qemu-cortex-m0/: defines.h
assets/sources/platform-qemu-cortex-m0/meson/: cross.ini
assets/sources/platform-qemu-cortex-m0/meson/dependencies/: meson.build
assets/sources/platform-qemu-cortex-m0/meson/globals/: meson.build
assets/sources/platform-qemu-cortex-m7f/: CMakeLists.txt  README.md  meson.build
assets/sources/platform-qemu-cortex-m7f/cmake/: dependencies.cmake  globals.cmake
assets/sources/platform-qemu-cortex-m7f/include-platform/micro-os-plus/: platform.h
assets/sources/platform-qemu-cortex-m7f/include-platform/micro-os-plus/platform-qemu-cortex-m7f/: defines.h
assets/sources/platform-qemu-cortex-m7f/meson/: cross.ini
assets/sources/platform-qemu-cortex-m7f/meson/dependencies/: meson.build
assets/sources/platform-qemu-cortex-m7f/meson/globals/: meson.build
assets/sources/platform-qemu-riscv-rv32imac/: CMakeLists.txt  README.md  meson.build
assets/sources/platform-qemu-riscv-rv32imac/cmake/: dependencies.cmake  globals.cmake
assets/sources/platform-qemu-riscv-rv32imac/include-config/micro-os-plus/: config.h
assets/sources/platform-qemu-riscv-rv32imac/include-platform/micro-os-plus/: platform.h
assets/sources/platform-qemu-riscv-rv32imac/include-platform/micro-os-plus/platform-qemu-riscv-rv32imac/: defines.h
assets/sources/platform-qemu-riscv-rv32imac/meson/: cross.ini
assets/sources/platform-qemu-riscv-rv32imac/meson/dependencies/: meson.build
assets/sources/platform-qemu-riscv-rv32imac/meson/globals/: meson.build
assets/sources/platform-qemu-riscv-rv64imafdc/: CMakeLists.txt  README.md  meson.build
assets/sources/platform-qemu-riscv-rv64imafdc/cmake/: dependencies.cmake  globals.cmake
assets/sources/platform-qemu-riscv-rv64imafdc/include-config/micro-os-plus/: config.h
assets/sources/platform-qemu-riscv-rv64imafdc/include-platform/micro-os-plus/: platform.h
assets/sources/platform-qemu-riscv-rv64imafdc/include-platform/micro-os-plus/platform-qemu-riscv-rv64imafdc/: defines.h
assets/sources/platform-qemu-riscv-rv64imafdc/meson/: cross.ini
assets/sources/platform-qemu-riscv-rv64imafdc/meson/dependencies/: meson.build
assets/sources/platform-qemu-riscv-rv64imafdc/meson/globals/: meson.build
assets/sources/src/: main-liquid.cpp  main.c  main.cpp
lib/: template.js
tests/: test.js
